# ISP490

./: .dockerignore  .env.example  .gitattributes  .gitignore  AIRFLOW_OPTIMIZATION_REPORT_20251006_135834.md  CLAUDE.md  COMPLETE_PIPELINE_ANALYSIS.md  DASHBOARD_UPDATED.md  DATA_AUDIT_REPORT_20251006_132222.md  DEV_MODE_GUIDE.md  Dockerfile.kafka-consumer  FULL_DEPLOYMENT_GUIDE.md  HUONG_DAN_CHAY_DU_AN.md  KAFKA_FIX_DEPLOYMENT_SUMMARY_20251006_161434.md  KAFKA_FIX_SOLUTION.md  LOGIN_LOGOUT_SETUP.md  PROJECT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  WEB_DEPLOYMENT_FINAL_REPORT.md  WEB_DEPLOYMENT_GUIDE.md  airflow_optimization_report.py  cleanup_and_restructure.py  create_vietnam_data_lake.py  data_audit_report.py  deploy_airflow_gcp.md  deploy_kafka_fix.py  deploy_manual.md  deploy_to_web.py  direct_kafka_test.py  docker-compose.dev.yml  docker-compose.streaming.yml  docker-compose.yml  docker-optimize.sh  fix_dashboard.py  fixed_kafka_consumer.py  generate_streaming_data.py  kafka_processor.py  kafka_to_postgres_streaming.py  pipeline_health_report_20251007_214423.json  (+14 more)
backend/: .env.example  .env.production  Dockerfile  Procfile  main.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/app/: ai_dss_endpoints.py  ai_recommendation_engine.py  auth_endpoints.py  bestseller_dashboard.py  customer_classification.py  dss_analytics.py  feedback_analysis.py  main.py  ml_endpoints.py  ml_service.py  ml_websocket_endpoints.py  performance.py  security.py  simple_auth.py  simple_auth_no_jwt.py  (+4 more)
(+352 files in other folders)
